infrastruture/awsecr-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: awsecr
  namespace: infrastructure
spec:
  serviceAccountName: ecr-update-service-account
  containers:
  - name: awsecr
    image: localhost:32000/awsecr
    imagePullPolicy: Always
