infrastruture/create-awsdns-updater.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "awsdns"
  namespace: infrastructure
  labels:
    app: "awsdns"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: awsdns
  template:
    metadata:
      labels:
        app: awsdns
    spec:
      serviceAccountName: aws-route53-update-service-account
      containers:
      - name: awsdns
        image: awsdns:1.0.0
        imagePullPolicy: Never
